# src/routes/adminSetTime.js
@@ -1,24 +1,20 @@
-import express from "express";
+import express from 'express';
 import {
-  getListTypeSetTime,
-  handleSetTimeRequest,
-  getOneTypeSetTime,
-} from "../controllers/adminSetTime";
-import { isAuthenticateUser, authorizeRoles } from "../middlewares/CheckAuth";
-import { role } from "../utils/role";
+	getListTypeSetTime,
+	handleSetTimeRequest,
+	getOneTypeSetTime,
+	updateSetTime,
+	deleteSetTime,
+} from '../controllers/adminSetTime';
+import { isAuthenticateUser, authorizeRoles } from '../middlewares/CheckAuth';
+import { role } from '../utils/role';
 
 const router = express.Router();
 
-router.post(
-  "/settime",
-  isAuthenticateUser,
-  authorizeRoles([role.manager]),
-  handleSetTimeRequest
-);
-router.get(
-  "/settime",
-  getListTypeSetTime
-);
-router.get("/settime/find-one", getOneTypeSetTime);
+router.post('/settime', isAuthenticateUser, authorizeRoles([role.manager]), handleSetTimeRequest);
+router.get('/settime/:id', isAuthenticateUser, getOneTypeSetTime);
+router.get('/settime', isAuthenticateUser, authorizeRoles([role.manager]), getListTypeSetTime);
+router.patch('/settime/:id', isAuthenticateUser, authorizeRoles([role.manager]), updateSetTime);
+router.delete('/settime/:id', isAuthenticateUser, authorizeRoles([role.manager]), deleteSetTime);
 
 module.exports = router;
